{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 4,
  "lineage": "3bd81909-cd30-7ab7-8f1c-bc9a928aa770",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "all_to_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/d0ec2118-ffe6-4b1b-907d-cc0e8a189885/resourceGroups/esdcvnetrg/providers/Microsoft.Network/routeTables/AllToCentralFirewallRt",
            "location": "canadacentral",
            "name": "AllToCentralFirewallRt",
            "resource_group_name": "esdcvnetrg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "RouteAllToFirewall",
                "next_hop_in_ip_address": "172.16.133.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {
              "Branch": "Transformation and Integrated Service Management",
              "Classification": "Unclassified",
              "Directorate": "Transformation Integrated Service Management",
              "Environment": "Development"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnetrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "to_fw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/d0ec2118-ffe6-4b1b-907d-cc0e8a189885/resourceGroups/esdcvnetrg/providers/Microsoft.Network/routeTables/EsToFirewallRt",
            "location": "canadacentral",
            "name": "EsToFirewallRt",
            "resource_group_name": "esdcvnetrg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "RouteAllToFirewall",
                "next_hop_in_ip_address": "172.16.133.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "172.16.128.0/18",
                "name": "RouteHub172TrafficToFirewall",
                "next_hop_in_ip_address": "172.16.133.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "100.97.194.0/25",
                "name": "RouteHub194TrafficToFirewall",
                "next_hop_in_ip_address": "172.16.133.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "100.97.195.0/25",
                "name": "RouteHub195TrafficToFirewall",
                "next_hop_in_ip_address": "172.16.133.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {
              "Branch": "Transformation and Integrated Service Management",
              "Classification": "Unclassified",
              "Directorate": "Transformation Integrated Service Management",
              "Environment": "Development"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnetrg"
          ]
        }
      ]
    }
  ]
}